--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kimchi-premium-server",
   "version": "1.0.0",
-  "description": "Kimchi Premium Site",
+  "description": "Kimchi Premium Vercel Deployment",
   "dependencies": {
     "axios": "^1.6.0"
   }
